--- a/inspire.html
+++ b/inspire.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Paula Scher</h1>
         <h2>Portrait</h2>
-        <img src="https://pentagram-production.imgix.net/b98dac18-7131-490e-ae30-486df1abf571/paula_scher_1500x1500.jpg?rect=0%2C0%2C1500%2C1500&w=500&fit=crop&q=70&fm=jpg&auto=format&h=500&dpr=2" alt="Paula Scher" height:"37px"; width:"auto";>
+        <img src="https://pentagram-production.imgix.net/b98dac18-7131-490e-ae30-486df1abf571/paula_scher_1500x1500.jpg?rect=0%2C0%2C1500%2C1500&w=500&fit=crop&q=70&fm=jpg&auto=format&h=500&dpr=2" alt="Paula Scher" height:"37">
         <h2>Graphic Design <em>Queen</em></h2>
         <p>Paula Scher is the first female graphic designer to design graphics and illustrations professionally.
           She is one of the most influential graphic designers in the world!</p>
