--- a/template.html
+++ b/template.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <h1>Page Title</h1>
+        <h2>Page subtitle</h2>
     </body>
+    <p>Stuff and things and stuff for writing</p><br>
+    <p>more things and stuff and info </p> <br>
 </html>
