--- a/template.html
+++ b/template.html
@@ -7,6 +7,6 @@
         <h1>Page Title</h1>
         <h2>Page subtitle</h2>
     </body>
-    <p>Stuff and things and stuff for writing</p><br>
-    <p>more things and stuff and info </p> <br>
+    <p>Stuff and things and stuff for writing<br>
+    more things and stuff and info </p> <br>
 </html>
