--- a/amuse.html
+++ b/amuse.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Amuse Me</title>
+    </head>
+    <body>
+        <h1>*giggles*</h1>
+        <h2>Site One: Random Cat Generator</h2>
+    </body>
+    <p>This website literally just generates pictures 
+      of random cats and you can click a button that says 
+    "Get a cat!" and it will give you a new picture of a different cat</p> <br>
+          <a href= "https://genrandom.com/cats/"> Check Me out! ;) </a>
+  <h2>Site 2: Archive of Our Own</h2>
+    <p>Archive of Our Own or Ao3 is a website where
+      people can write, publish, and read stories. 
+      They range from incredibly original to works of fanfiction.</p> <br>
+            <a href= "https://archiveofourown.org//"> Check Me out! ;) </a>
+            <h2>Site 3: Duck Life</h2>
+    <p> Duck Life is an online game where you train 
+      and raise a duck to race in triathlons against other ducks. 
+      You can find it on a bunch of different sites but I prefered Cool Math Games.</p> <br>
+          <a href= "https://www.coolmathgames.com/0-duck-life#immersiveModal"> Check Me out! ;) </a>
 
+</html>
