--- a/amuse.html
+++ b/amuse.html
@@ -12,8 +12,8 @@
     "Get a cat!" and it will give you a new picture of a different cat</p> <br>
           <a href= "https://genrandom.com/cats/"> Check Me out! ;)</a>
   <h2>Site 2: Archive of Our Own</h2>
-    <p>Archive of Our Own or Ao3 is a website where<br>
-      people can write, publish, and read stories. <br>
+    <p>Archive of Our Own or Ao3 is a website <br>
+      where people can write, publish, and read stories. <br>
       They range from incredibly original to works of fanfiction.</p> <br>
             <a href= "https://archiveofourown.org//"> Check Me out! ;)</a>
             <h2>Site 3: Duck Life</h2>
