--- a/amuse.html
+++ b/amuse.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>*giggles*</h1>
+        <h3>by Cheyenne Kayla Bateman</h3>
         <h2>Site One: Random Cat Generator</h2>
     </body>
     <p>This website literally just generates pictures<br>
