--- a/template.html
+++ b/template.html
@@ -20,4 +20,8 @@
     more things and stuff and info </p> <br>
     <p>Stuff and things and stuff for writing<br>
     more things and stuff and info </p> <br>
+    <mark> to highlight</mark>
+    <img src="https://www.meme-arsenal.com/memes/0a6f340954da77d33892763a770260ba.jpg" alt="smart cat">
+    <a href=https://www.brainyquote.com/quote_of_the_day> read me</a>
+
 </html>
