--- a/profile.html
+++ b/profile.html
@@ -12,5 +12,8 @@
       and I've been to thirteen different countries outside of the US and cannot wait<br>
       to see more of the world. </p>
   
-   <img src="https://drive.google.com/uc?export=view&id=1kd0uizjik6oR28rW5zPnBhgz_o0hjL3D" alt="Me and Sparkles">
+   <img src="https://drive.google.com/uc?export=view&id=1kd0uizjik6oR28rW5zPnBhgz_o0hjL3D" 
+        width= "333"
+        height= "333"
+       alt="Me and Sparkles">
 </html>
