--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,9 @@
       to see more of the world. </p>
   
    <img src="https://drive.google.com/uc?export=view&id=1kd0uizjik6oR28rW5zPnBhgz_o0hjL3D" 
-        width= "333"
-        height= "333"
+       img{ 
+        width= 100%
+        height= auto;
+       }
        alt="Me and Sparkles">
 </html>
