--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-please work :)
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Template</title>
+    </head>
+    <body>
+        <h1>Page Title</h1>
+        <h2>Page subtitle</h2>
+    </body>
+    <p>Stuff and things and stuff for writing<br>
+    more things and stuff and info </p> <br>
+    <p>Stuff and things and stuff for writing<br>
+    more things and stuff and info </p> <br>
+    <p>Stuff and things and stuff for writing<br>
+    more things and stuff and info </p> <br>
+            <h2>Page subtitle</h2>
