--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Template</title>
+        <title>Menu</title>
     </head>
     <body>
-        <h1>Page Title</h1>
-        <h2>Page subtitle</h2>
+        <h1>Everything You Need</h1>
+       <img src="UNClogo.png" ALT="UNC Logo">
+    <p><a href="amuse.html"> Amuse Me </a></p>  
+  
+    <p><a href="inspire.html"> Inspire Me </a></p>
+
+    <p><a href="profile.html"> All About ME </a></p>
+
     </body>
-    <p>Stuff and things and stuff for writing<br>
-    more things and stuff and info </p> <br>
-    <p>Stuff and things and stuff for writing<br>
-    more things and stuff and info </p> <br>
-    <p>Stuff and things and stuff for writing<br>
-    more things and stuff and info </p> <br>
-            <h2>Page subtitle</h2>
+    </html>
