--- a/template.html
+++ b/template.html
@@ -22,7 +22,11 @@
     <p>Stuff and things and stuff for writing<br>
     more things and stuff and info </p> <br>
     <mark> to highlight</mark><br>
-    <img src="https://www.meme-arsenal.com/memes/0a6f340954da77d33892763a770260ba.jpg" alt="smart cat"><br>
+    <img src="https://www.meme-arsenal.com/memes/0a6f340954da77d33892763a770260ba.jpg" alt="smart cat">
+     img{ 
+        width= 33%
+        height= auto;
+       }<br>
     <a href=https://www.brainyquote.com/quote_of_the_day> read me</a><br>
 
 </html>
