--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     </head>
     <body>
         <h1>Everything You Need</h1>
-       <img src="UNClogo.png" ALT="UNC Logo">
+       <img src="UNClogo.png"  img{ 
+        width= 33%
+        height= auto;
+       } ALT="UNC Logo">
     <p><a href="amuse.html"> Amuse Me </a></p>  
   
     <p><a href="inspire.html"> Inspire Me </a></p>
 
     <p><a href="profile.html"> All About ME </a></p>
 
+    <p><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate my page! </a></p>
     </body>
     </html>
