--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     </head>
     <body>
         <h1>Everything You Need</h1>
-       <img src="UNClogo.png"  img{ 
-        width= 33%
-        height= auto;
-       } ALT="UNC Logo">
+       <img src="UNClogo.png"  
+       img{ width= 33%
+            height= auto;} ALT="UNC Logo">
     <p><a href="amuse.html"> Amuse Me </a></p>  
   
     <p><a href="inspire.html"> Inspire Me </a></p>
