--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <body>
         <h1>Everything You Need</h1>
        <img src="UNClogo.png"  
-       img{ width= 33%
-            height= auto;} ALT="UNC Logo">
+             ALT="UNC Logo">
     <p><a href="amuse.html"> Amuse Me </a></p>  
   
     <p><a href="inspire.html"> Inspire Me </a></p>
