--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <h1>Everything You Need</h1>
-       <img src="UNClogo.png"  
-             ALT="UNC Logo">
+       <img src="UNClogo.png" ALT="UNC Logo">
     <p><a href="amuse.html"> Amuse Me </a></p>  
   
     <p><a href="inspire.html"> Inspire Me </a></p>
