--- a/educate.html
+++ b/educate.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Educate Me</h1>
         <section>
-            <h2> ted talks </h2>
+            <h2>Ted Talks </h2>
             <iframe src="https://www.unco.edu"></iframe>
         </section>
         <section>
