--- a/educate.html
+++ b/educate.html
@@ -8,8 +8,10 @@
         <h1>Educate Me</h1>
         <section>
             <h2>Ted Talks </h2>
-            <iframe src="https://www.unco.edu" 
-            width="800" height="500"></iframe>
+            <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%">
+                <iframe src="https://embed.ted.com/talks/lang/en/taylor_wilson_yup_i_built_a_nuclear_fusion_reactor" 
+                width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" 
+                frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
         </section>
         <section>
             <h2>RSA Animations</h2>
