--- a/educate.html
+++ b/educate.html
@@ -19,6 +19,10 @@
             </section>
         <section>
             <h2>RSA Animations</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9jaigrEnYsA?si=_TQSsdusqpmUCQ4l" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/e99GxhVpXDE?si=Yg_UU-3JVXLCw-51" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
     </body>
     
