--- a/educate.html
+++ b/educate.html
@@ -11,7 +11,7 @@
             <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%">
                 <iframe src="https://embed.ted.com/talks/lang/en/taylor_wilson_yup_i_built_a_nuclear_fusion_reactor" 
                 width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" 
-                frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
+                frameborder="0" scrolling="no" allowfullscreen></iframe></div></div> <br>
                 <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%">
                 <iframe src="https://embed.ted.com/talks/lang/en/memory_banda_a_warrior_s_cry_against_child_marriage" 
                 width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" 
@@ -20,7 +20,7 @@
         <section>
             <h2>RSA Animations</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9jaigrEnYsA?si=_TQSsdusqpmUCQ4l" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/e99GxhVpXDE?si=Yg_UU-3JVXLCw-51" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
