--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <p><a href="profile.html"> All About ME </a></p>
 
+    <p><a href="educate.html"> Educate Me</a></p>
+
     <p><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate my page!</a></p>
     </body>
     </html>
