--- a/test.html
+++ b/test.html
@@ -12,6 +12,11 @@
                 <th>URL</th>
                 <th>Validation</th>
             </tr>
+            <tr>
+                <td>Homepage</td>
+                <td><a href="https://cheyennekayla.github.io">https://cheyennekayla.github.io</a></td>
+                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate</a></a></td>
+            </tr>
         </table>
     </body>
 
