--- a/test.html
+++ b/test.html
@@ -7,11 +7,14 @@
     <body>
         <h1>Test Page</h1>
         <table>
+            <thead>
             <tr>
                 <th>Page Name</th>
                 <th>URL</th>
                 <th>Validation</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
                 <td>Homepage</td>
                 <td><a href="https://cheyennekayla.github.io">https://cheyennekayla.github.io</a></td>
@@ -37,7 +40,7 @@
                 <td><a href="https://cheyennekayla.github.io/educate.html">https://cheyennekayla.github.io/educate.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate</a></a></td>
             </tr>
-         
+        </tbody>
 
         </table>
     </body>
