--- a/test.html
+++ b/test.html
@@ -23,22 +23,22 @@
             <tr>
                 <td>Amuse Me</td>
                 <td><a href="https://cheyennekayla.github.io/amuse.html">https://cheyennekayla.github.io/amuse.html</a></td>
-                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate</a></a></td>
+                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Famuse.html"> Validate</a></a></td>
             </tr>
             <tr>
                 <td>Inspire Me</td>
                 <td><a href="https://cheyennekayla.github.io/inspire.html">https://cheyennekayla.github.io/inspire.html</a></td>
-                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate</a></a></td>
+                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Finspire.html"> Validate</a></a></td>
             </tr>
             <tr>
                 <td>All About ME</td>
                 <td><a href="https://cheyennekayla.github.io/profile.html">https://cheyennekayla.github.io/profile.html</a></td>
-                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate</a></a></td>
+                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Fprofile.html"> Validate</a></a></td>
             </tr>
             <tr>
                 <td>Educate Me</td>
                 <td><a href="https://cheyennekayla.github.io/educate.html">https://cheyennekayla.github.io/educate.html</a></td>
-                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate</a></a></td>
+                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Feducate.html"> Validate</a></a></td>
             </tr>
         </tbody>
 
