--- a/profile.html
+++ b/profile.html
@@ -10,12 +10,11 @@
       I love to write, read, and create things in any sort of artistic way. I've <br>
       really gotten into jewelry making and print making lately. I love to travel<br>
       and I've been to thirteen different countries outside of the US and cannot wait<br>
-      to see more of the world. </p>
+      to see more of the world.</p>
   
    <img src="https://drive.google.com/uc?export=view&id=1kd0uizjik6oR28rW5zPnBhgz_o0hjL3D" 
        img{ 
         width= 33%
-        height= auto;
-       }
+        height= auto; }
        alt="Me and Sparkles">
 </html>
