--- a/amuse.html
+++ b/amuse.html
@@ -11,7 +11,7 @@
     </body>
     <p>This website literally just generates pictures<br>
       of random cats and you can click a button that says <br>
-    "Get a cat!" and it will give you a new picture of a different cat <br> </p>
+    "Get a cat!" and it will give you a new picture of a different cat </p>
           <a href= "https://genrandom.com/cats/"> Check Me out! ;)</a>
   <h2>Site 2: Archive of Our Own</h2>
     <p>Archive of Our Own or Ao3 is a website <br>
