--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <body>
         <h1>Everything You Need</h1>
        <img src="UNClogo.png" ALT="UNC Logo" width="350" height="100">
-    <p><a href="amuse.html"> Amuse Me </a></p>  
+    <ul>
+       <li><a href="amuse.html"> Amuse Me </a></li>  
   
-    <p><a href="inspire.html"> Inspire Me </a></p>
+    <li><a href="inspire.html"> Inspire Me </a></li>
 
-    <p><a href="profile.html"> All About ME </a></p>
+    <li><a href="profile.html"> All About ME </a></li>
 
-    <p><a href="educate.html"> Educate Me</a></p>
+    <li><a href="educate.html"> Educate Me</a></li>
 
-    <p><a href="test.html"> Testing Testing Testing</a></p>
-
+    <li><a href="test.html"> Testing Testing Testing</a></li>
+</ul>
+</p>
     <p><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate my page!</a></p>
     </body>
     </html>
