--- a/amuse.html
+++ b/amuse.html
@@ -23,5 +23,6 @@
       and raise a duck to race in triathlons against other ducks. <br>
       You can find it on a bunch of different sites but I prefered Cool Math Games.</p> <br>
           <a href= "https://www.coolmathgames.com/0-duck-life#immersiveModal"> Check Me out! ;)</a>
+          <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
 
 </html>
