--- a/educate.html
+++ b/educate.html
@@ -24,6 +24,9 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/e99GxhVpXDE?si=Yg_UU-3JVXLCw-51" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
+        <br>
+          <br>
+          <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
     </body>
     
 
