--- a/inspire.html
+++ b/inspire.html
@@ -18,5 +18,8 @@
             Scher has been a partner of Pentagram, the worlds largest independent design company since 1991. 
             And she is known for her eclectic typographic style that has influenced so many.</p>
         <p><a href="https://www.pentagram.com/about/paula-scher"> Read More Here! </a></p>
+        <br>
+        <br>
+        <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
     </body>
 </html>
