--- a/profile.html
+++ b/profile.html
@@ -17,4 +17,7 @@
         width= 33%
         height= auto; }
        alt="Me and Sparkles">
+       <br>
+          <br>
+          <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
 </html>
