--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Everything You Need</h1>
-       <img src="UNClogo.png" ALT="UNC Logo" width="350" height="100">
+       <img src="images/UNClogo.png" ALT="UNC Logo" width="350" height="100">
     <ul>
        <li><a href="amuse.html"> Amuse Me </a></li>  
   
