--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
       and I've been to thirteen different countries outside of the US and cannot wait<br>
       to see more of the world.</p>
   
-   <img src="https://drive.google.com/uc?export=view&id=1kd0uizjik6oR28rW5zPnBhgz_o0hjL3D" 
+   <img src="images/MeAndSparkles.jpg" 
        img{ 
         width= 33%
         height= auto; }
