--- a/test.html
+++ b/test.html
@@ -40,6 +40,11 @@
                 <td><a href="https://cheyennekayla.github.io/educate.html">https://cheyennekayla.github.io/educate.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Feducate.html"> Validate</a></a></td>
             </tr>
+            <tr>
+                <td>Template</td>
+                <td><a href="https://cheyennekayla.github.io/template.html">https://cheyennekayla.github.io/template.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Ftemplate.html"> Validate</a></a></td>
+            </tr>
         </tbody>
 
         </table>
