--- a/superhero.html
+++ b/superhero.html
@@ -3,11 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Superhero</title>
+        <style>
+            img
+            {
+              height: 100px;  
+            }
+
+
+        </style>
     </head>
     <body>
-        <h1>Page Title</h1>
-        <h2>Page subtitle</h2>
-    </body>
     <h1>My Favorite Superheroes</h1>
     <table>
         <thead>
@@ -41,15 +46,5 @@
                 </tr>
             </tbody>
         </table>
-
-
-
-    <img src="https://www.meme-arsenal.com/memes/0a6f340954da77d33892763a770260ba.jpg" 
-        img{ 
-        width= 33%
-        height= auto;
-       } alt="smart cat">
-    <br>
-    <a href=https://www.brainyquote.com/quote_of_the_day> read me</a><br>
-
+</body>
 </html>
