--- a/superhero.html
+++ b/superhero.html
@@ -28,7 +28,7 @@
                 <tr>
                     <th>Wonder Woman</th>
                     <td>Diana Prince</td>
-                    <td><img src="images/wonderwoman.jpg" alt="Wonder Woman Pic"></td>
+                    <td><a href= "image/wonderwoman.jpg"><img src="images/wonderwoman.jpg" alt="Wonder Woman Pic"></a></td>
                     <td>
                         <ul>
                             <li>super strength</li>
