--- a/superhero.html
+++ b/superhero.html
@@ -41,7 +41,26 @@
                             <li>superhuman agility</li>
                         </ul>
                         </td>
-                        <td>n/a</td>
+                        <td>Her weapons can be used against her.</td>
+                    </td>
+                </tr>
+                <tr>
+                    <th>Storm</th>
+                    <td>Ororo Munroe</td>
+                    <td><a href= "image/storm.jpg"><img src="images/storm.jpg" alt="Storm Pic"></a></td>
+                    <td>
+                        <ul>
+                            <li>atmokinesis</li>
+                            <li>psionics</li>
+                            <li>control of elements</li>
+                            <li>flight</li>
+                            <li>heightened senses</li>
+                            <li>aerokinesis</li>
+                            <li>telepathic resistence</li>
+                            <li>energy vision</li>
+                        </ul>
+                        </td>
+                        <td>claustrophobia</td>
                     </td>
                 </tr>
             </tbody>
