--- a/superhero.html
+++ b/superhero.html
@@ -8,7 +8,21 @@
             {
               height: 100px;  
             }
-
+            td, th
+            {
+                border: 2px solid rgb(90, 64, 117);
+                padding: 15px;
+                
+            }
+            table
+            {
+                border-spacing: 0px;
+            }
+            th
+            {
+                background-color: rgb(198, 145, 255);
+                font-size: 18px;
+            }
 
         </style>
     </head>
