--- a/superhero.html
+++ b/superhero.html
@@ -77,6 +77,26 @@
                         <td>claustrophobia</td>
                     </td>
                 </tr>
+                <tr>
+                    <th>Starfire</th>
+                    <td>Koriand'r</td>
+                    <td><a href= "image/starfire.jpg"><img src="images/starfire.jpg" alt="Storm Pic"></a></td>
+                    <td>
+                        <ul>
+                            <li>flight</li>
+                            <li>energy projection</li>
+                            <li>self sustenance</li>
+                            <li>invulnerability</li>
+                            <li>superhuman strength</li>
+                            <li>language assimilation</li>
+                            <li>accelerated healing factor</li>
+                            <li>immense agility</li>
+                            <li>exceptional fighting and combat skills</li>
+                        </ul>
+                        </td>
+                        <td>metallic chromium and emotional instability</td>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </body>
