--- a/superhero.html
+++ b/superhero.html
@@ -97,6 +97,25 @@
                         <td>metallic chromium and emotional instability</td>
                     </td>
                 </tr>
+                <tr>
+                    <th>Spider Man</th>
+                    <td>Peter Bejamin Parker</td>
+                    <td><a href= "image/spiderman.jpg"><img src="images/spiderman.jpg" alt="Storm Pic"></a></td>
+                    <td>
+                        <ul>
+                            <li>superhuman strength</li>
+                            <li>superhuman speed</li>
+                            <li>superhuman reflexes</li>
+                            <li>superhuman durability</li>
+                            <li>healing factor</li>
+                            <li>"Spider-Sense" alert</li>
+                            <li>heightened senses</li>
+                            <li>wallcrawling</li>
+                        </ul>
+                        </td>
+                        <td>ethyl chloride</td>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </body>
