--- a/superhero.html
+++ b/superhero.html
@@ -41,7 +41,12 @@
             <tbody>
                 <tr>
                     <th>Wonder Woman</th>
-                    <td>Diana Prince</td>
+                    <td>
+                        <ul>
+                        <il>Diana Prince</il>
+                        <il>Princess Diana</il>
+                        </ul>
+                        </td>
                     <td><a href= "image/wonderwoman.jpg"><img src="images/wonderwoman.jpg" alt="Wonder Woman Pic"></a></td>
                     <td>
                         <ul>
@@ -60,7 +65,18 @@
                 </tr>
                 <tr>
                     <th>Storm</th>
-                    <td>Ororo Munroe</td>
+                    <td>
+                        <ul>
+                            <il><strong>Ororo Munroe</strong></il>
+                            <il>White Knight</il>
+                            <il>Wind-Rider</il>
+                            <il>Weather Witch</il>
+                            <il>Goddess of the Plains</il>
+                            <il>Goddess of Thunder</il>
+                            <il>la Reine Storm</il>
+                            <il>Stormy</il>
+                        </ul>
+                    </td>
                     <td><a href= "image/storm.jpg"><img src="images/storm.jpg" alt="Storm Pic"></a></td>
                     <td>
                         <ul>
@@ -79,8 +95,15 @@
                 </tr>
                 <tr>
                     <th>Starfire</th>
-                    <td>Koriand'r</td>
-                    <td><a href= "image/starfire.jpg"><img src="images/starfire.jpg" alt="Storm Pic"></a></td>
+                    <td>
+                        <ul>
+                            <il><strong>Koriand'r</strong></il>
+                            <il>Star</il>
+                            <il>Twinkle Star</il>
+                            <il>Kory Anders</il>
+                        </ul>
+                        Koriand'r</td>
+                    <td><a href= "image/starfire.jpg"><img src="images/starfire.jpg" alt="Starfire Pic"></a></td>
                     <td>
                         <ul>
                             <li>flight</li>
@@ -98,9 +121,42 @@
                     </td>
                 </tr>
                 <tr>
+                    <th>Squirrel Girl</th>
+                    <td>Doreen Allene Green</td>
+                    <td><a href= "image/squirrelgirl.jpg"><img src="images/squirrelgirl.jpg" alt="Squirrel Girl Pic"></a></td>
+                    <td>
+                        <ul>
+                            <li>superhuman strength</li>
+                            <li>superhuman speed</li>
+                            <li>superhuman reflexes</li>
+                            <li>superhuman agility</li>
+                            <li>semi-prehensile tail</li>
+                            <li>empathic links</li>
+                            <li>superhuman leaping</li>
+                            <li>superhuman jaw strength</li>
+                            <li>night vision</li>
+                            <li>climbing</li>
+                            <li>knuckle spike</li>
+                            <il>enhanced peripheral vision</il>
+                            <il>regenerative healing factor</il>
+                            <il>communication with scquirrels</il>
+                        </ul>
+                        </td>
+                        <td> N/A </td>
+                    </td>
+                </tr>
+                <tr>
                     <th>Spider Man</th>
-                    <td>Peter Bejamin Parker</td>
-                    <td><a href= "image/spiderman.jpg"><img src="images/spiderman.jpg" alt="Storm Pic"></a></td>
+                    <td>
+                        <ul>
+                            <il><strong>Peter Bejamin Parker</strong></il>
+                            <il>Webslinger</il>
+                            <il>Webhead</il>
+                            <il>Wall-crawler</il>
+                            <il>Spidey</il>
+                        </ul>
+                    </td>
+                    <td><a href= "image/spiderman.jpg"><img src="images/spiderman.jpg" alt="Spiderman Pic"></a></td>
                     <td>
                         <ul>
                             <li>superhuman strength</li>
