--- a/superhero.html
+++ b/superhero.html
@@ -10,6 +10,7 @@
             }
             td, th
             {
+                font-family: "Georgia", "times", serif;
                 border: 2px solid rgb(90, 64, 117);
                 padding: 15px;
                 
