--- a/superhero.html
+++ b/superhero.html
@@ -43,10 +43,7 @@
                 <tr>
                     <th>Wonder Woman</th>
                     <td>
-                        <ul>
-                        <il>Diana Prince</il>
-                        <il>Princess Diana</il>
-                        </ul>
+                        Diana Prince, Princess Diana
                         </td>
                     <td><a href= "image/wonderwoman.jpg"><img src="images/wonderwoman.jpg" alt="Wonder Woman Pic"></a></td>
                     <td>
@@ -67,16 +64,9 @@
                 <tr>
                     <th>Storm</th>
                     <td>
-                        <ul>
-                            <il><strong>Ororo Munroe</strong></il>
-                            <il>White Knight</il>
-                            <il>Wind-Rider</il>
-                            <il>Weather Witch</il>
-                            <il>Goddess of the Plains</il>
-                            <il>Goddess of Thunder</il>
-                            <il>la Reine Storm</il>
-                            <il>Stormy</il>
-                        </ul>
+                        <strong>Ororo Munroe</strong>, White Knight, Wind-Rider, <br>
+                        Weather Witch, Goddess of the Plains, Goddess of Thunder, <br> 
+                        la Reine Storm, Stormy <br>
                     </td>
                     <td><a href= "image/storm.jpg"><img src="images/storm.jpg" alt="Storm Pic"></a></td>
                     <td>
@@ -97,12 +87,7 @@
                 <tr>
                     <th>Starfire</th>
                     <td>
-                        <ul>
-                            <il><strong>Koriand'r</strong></il>
-                            <il>Star</il>
-                            <il>Twinkle Star</il>
-                            <il>Kory Anders</il>
-                        </ul>
+                        <strong>Koriand'r</strong>, Star, Twinkle Star, Kory Anders</il>
                     </td>
                     <td><a href= "image/starfire.jpg"><img src="images/starfire.jpg" alt="Starfire Pic"></a></td>
                     <td>
@@ -149,13 +134,7 @@
                 <tr>
                     <th>Spider Man</th>
                     <td>
-                        <ul>
-                            <il><strong>Peter Bejamin Parker</strong></il>
-                            <il>Webslinger</il>
-                            <il>Webhead</il>
-                            <il>Wall-crawler</il>
-                            <il>Spidey</il>
-                        </ul>
+                        <strong>Peter Bejamin Parker</strong>, Webslinger, Webhead, Wall-crawler, Spidey
                     </td>
                     <td><a href= "image/spiderman.jpg"><img src="images/spiderman.jpg" alt="Spiderman Pic"></a></td>
                     <td>
