--- a/superhero.html
+++ b/superhero.html
@@ -154,5 +154,8 @@
                 </tr>
             </tbody>
         </table>
+        <br>
+        <br>
+        <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
 </body>
 </html>
