--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <li><a href="educate.html"> Educate Me</a></li>
 
+    <li><a href="superhero.html"> My Favorite Superhero</a></li>
+
 </ul>
 </p>
     <p><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate my page!</a></p>
