--- a/superhero.html
+++ b/superhero.html
@@ -65,8 +65,8 @@
                     <th>Storm</th>
                     <td>
                         <strong>Ororo Munroe</strong>, White Knight, Wind-Rider, <br>
-                        Weather Witch, Goddess of the Plains, Goddess of Thunder, <br> 
-                        la Reine Storm, Stormy <br>
+                        Weather Witch, Goddess of the Plains, <br>
+                        Goddess of Thunder, la Reine Storm, Stormy <br>
                     </td>
                     <td><a href= "image/storm.jpg"><img src="images/storm.jpg" alt="Storm Pic"></a></td>
                     <td>
