--- a/superhero.html
+++ b/superhero.html
@@ -134,7 +134,8 @@
                 <tr>
                     <th>Spider Man</th>
                     <td>
-                        <strong>Peter Bejamin Parker</strong>, Webslinger, Webhead, Wall-crawler, Spidey
+                        <strong>Peter Bejamin Parker</strong>, Webslinger, <br>
+                        Webhead, Wall-crawler, Spidey <br>
                     </td>
                     <td><a href= "image/spiderman.jpg"><img src="images/spiderman.jpg" alt="Spiderman Pic"></a></td>
                     <td>
