--- a/test.html
+++ b/test.html
@@ -45,6 +45,11 @@
                 <td><a href="https://cheyennekayla.github.io/template.html">https://cheyennekayla.github.io/template.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Ftemplate.html"> Validate</a></a></td>
             </tr>
+            <tr>
+                <td>Superhero</td>
+                <td><a href="https://cheyennekayla.github.io/superhero.html">https://cheyennekayla.github.io/superhero.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2Fsuperhero.html"> Validate</a></a></td>
+            </tr>
         </tbody>
 
         </table>
