--- a/superhero.html
+++ b/superhero.html
@@ -87,7 +87,7 @@
                 <tr>
                     <th>Starfire</th>
                     <td>
-                        <strong>Koriand'r</strong>, Star, Twinkle Star, Kory Anders</il>
+                        <strong>Koriand'r</strong>, Star, Twinkle Star, Kory Anders
                     </td>
                     <td><a href= "image/starfire.jpg"><img src="images/starfire.jpg" alt="Starfire Pic"></a></td>
                     <td>
