--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <li><a href="educate.html"> Educate Me</a></li>
 
-    <li><a href="superhero.html"> My Favorite Superhero</a></li>
+    <li><a href="superhero.html"> My Favorite Superheroes</a></li>
 
 </ul>
 </p>
