--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>All About ME</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Cheyenne Kayla Bateman</h1>
