--- a/superhero.html
+++ b/superhero.html
@@ -26,6 +26,7 @@
             }
 
         </style>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
     <h1>My Favorite Superheroes</h1>
