--- a/inspire.html
+++ b/inspire.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Inspire Me</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Paula Scher</h1>
