--- a/inspire.html
+++ b/inspire.html
@@ -22,6 +22,6 @@
         <p><a href="https://www.pentagram.com/about/paula-scher"> Read More Here! </a></p>
         <br>
         <br>
-        <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
+        <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
     </body>
 </html>
