--- a/superhero.html
+++ b/superhero.html
@@ -157,6 +157,6 @@
         </table>
         <br>
         <br>
-        <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
+        <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
 </body>
 </html>
