--- a/educate.html
+++ b/educate.html
@@ -27,7 +27,7 @@
         </section>
         <br>
           <br>
-          <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
+          <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
     </body>
     
 
