--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
     <li><a href="superhero.html"> My Favorite Superheroes</a></li>
 
-</ul>
-</p>
-    <p><a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate my page!</a></p>
+</ul>  </p>
+
+    <p class="footertext">
+        <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fcheyennekayla.github.io%2F"> Validate my page!</a></p>
     </body>
     </html>
