--- a/amuse.html
+++ b/amuse.html
@@ -26,6 +26,7 @@
           <a href= "https://www.coolmathgames.com/0-duck-life#immersiveModal"> Check Me out! ;)</a>
           <br>
           <br>
-          <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button" </a>
+          <p class="footertext">
+          <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a> </p>
 
 </html>
