--- a/amuse.html
+++ b/amuse.html
@@ -26,7 +26,6 @@
           <a href= "https://www.coolmathgames.com/0-duck-life#immersiveModal"> Check Me out! ;)</a>
           <br>
           <br>
-          <p class="footertext">
-          <a href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a> </p>
+          <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
 
 </html>
