--- a/profile.html
+++ b/profile.html
@@ -21,5 +21,5 @@
        alt="Me and Sparkles">
        <br>
           <br>
-          <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"</a>
+          <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"></a>
 </html>
