--- a/superhero.html
+++ b/superhero.html
@@ -126,7 +126,7 @@
                             <li>knuckle spike</li>
                             <il>enhanced peripheral vision</il>
                             <il>regenerative healing factor</il>
-                            <il>communication with scquirrels</il>
+                            <il>communication with squirrels</il>
                         </ul>
                         </td>
                         <td> N/A </td>
