--- a/resume/skills.html
+++ b/resume/skills.html
@@ -8,7 +8,7 @@
     <nav>
         <ul>
             <li><a href=contactinfo.html">Contact Info</a></li>
-            <li><a href="#education">Education</a></li>
+            <li><a href="index.html#education">Education</a></li>
             <li><a href="index.html#experience">Experience</a></li>
             <li><a href="skills.html">Skills</a></li>
         </ul>
