--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,44 @@
             <li><a href="skills.html">Skills</a></li>
         </ul>
     </nav>
+    <h1>Peter Parker</h1>
+    <section id="eductaion">
+        <h2>Education</h2>
+    </section>
+    <br>    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> 
+    <br>    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> 
+    <br>    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> 
+    <br>    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section id="Experience">
+        <h2>Experience</h2>
+    </section>
 </body>
-
-
 </html>
