--- a/resume/index.html
+++ b/resume/index.html
@@ -49,7 +49,7 @@
     <br>
     <br>
     <br>
-    <section id="Experience">
+    <section id="experience">
         <h2>Experience</h2>
     </section>
 </body>
