--- a/resume/index.html
+++ b/resume/index.html
@@ -16,41 +16,40 @@
     <h1>Peter Parker</h1>
     <section id="eductaion">
         <h2>Education</h2>
+       <ul> 
+            <il>
+                <ul>
+                     <li class="location">Midtown High School</li>
+                     <li class="date">Graduated 2015</li>
+                </ul>
+            </il>
+            <il>
+                <ul>
+                     <li class="location">Empire State University</li>
+                     <li class="date">Graduated 2019</li>
+                     <li>Bachelor of Fine Arts in Graphic Design</li>
+                </ul>
+            </il>
+        </ul>
     </section>
-    <br>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br> 
-    <br>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br> 
-    <br>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br> 
-    <br>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <section id="experience">
         <h2>Experience</h2>
+        <ol> 
+            <il>
+                <ul>
+                     <li class="date">2019-Present</li>
+                     <li class="location">Freelance</li>
+                     <li class="title">Graphic Designer</li>
+                </ul>
+            </il>
+            <il>
+                <ul>
+                     <li class="date">Summer 2018</li>
+                     <li class="location">Stark Industries</li>
+                     <li class="title">Graphic Design Intern</li>
+                </ul>
+            </il>
+        </ol>
     </section>
 </body>
 </html>
