--- a/resume/contactinfo.html
+++ b/resume/contactinfo.html
@@ -13,5 +13,10 @@
             <li><a href="skills.html">Skills</a></li>
         </ul>
     </nav>
+    <h1>Peter Parker</h1>
+    <ul>
+        <il>Phone:(555)123-4567</il>
+        <il>Email:peter.parker.design@gmail.com</il>
+    </ul>
 </body>
 </html>
