--- a/resume/skills.html
+++ b/resume/skills.html
@@ -13,5 +13,27 @@
             <li><a href="skills.html">Skills</a></li>
         </ul>
     </nav>
+    <ul>
+        <il>
+            <h2>Graphic Design</h2>
+            <p>Proficient in Adobe Creative Suite (Photoshop, Illustrator, InDesign) and other design tools.</p>
+        </il>
+        <il>
+            <h2>Web Design</h2>
+            <p> Experienced in creating user-friendly and visually appealing website designs.</p>
+        </il>
+        <il>
+            <h2>Typography</h2>
+            <p>Strong understanding of typography principles and the ability to create visually harmonious layouts.</p>
+        </il>
+        <il>
+            <h2>Branding</h2>
+            <p>Skilled in developing and maintaining cohesive visual identities for brands.</p>
+        </il>
+        <il>
+            <h2>Illustration</h2>
+            <p>Capable of creating custom illustrations and graphics for various design projects.</p>
+        </il>
+    </ul>
 </body>
 </html>
