--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href=contactinfo.html">Contact Info</a></li>
+            <li><a href="contactinfo.html">Contact Info</a></li>
             <li><a href="index.html#education">Education</a></li>
             <li><a href="index.html#experience">Experience</a></li>
             <li><a href="skills.html">Skills</a></li>
