--- a/resume/contactinfo.html
+++ b/resume/contactinfo.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Resume</title>
-<meta charset = "UTF-8">
+    <meta charset = "UTF-8">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
