--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,7 @@
                 <ul>
                      <li class="location">Empire State University</li>
                      <li class="date">Graduated 2019</li>
-                     <li>Bachelor of Fine Arts in Graphic Design</li>
+                     <li class="major">Bachelor of Fine Arts in Graphic Design</li>
                 </ul>
             </il>
         </ul>
