--- a/resume/contactinfo.html
+++ b/resume/contactinfo.html
@@ -15,6 +15,7 @@
         </ul>
     </nav>
     <h1>Peter Parker</h1>
+    <img src="images/peter.png" alt="Profile Pic">
     <ul>
         <il> Phone:(555)123-4567 </il>
         <il> Email:peter.parker.design@gmail.com </il>
