--- a/resume/contactinfo.html
+++ b/resume/contactinfo.html
@@ -17,9 +17,9 @@
     </nav>
     <h1>Peter Parker</h1>
     <img src="images/peter.png" alt="Profile Pic">
-    <ol>
-        <il> Phone:(555)123-4567 </il>
-        <il> Email:peter.parker.design@gmail.com </il>
-    </ol>
+    <ul>
+        <li> Phone:(555)123-4567 </li>
+        <li> Email:peter.parker.design@gmail.com </li>
+    </ul>
 </body>
 </html>
