--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1 class="display-1 id="nametitle">Cheyenne Kayla Bateman</h1>
+        <h1 class="display-1 text-center" id="nametitle">Cheyenne Kayla Bateman</h1>
     </body>
     <p class="text-primary">Hello, I'm a graphic design major with a certification in digital marketing.<br>
       I love to write, read, and create things in any sort of artistic way. I've <br>
