--- a/profile.html
+++ b/profile.html
@@ -8,20 +8,28 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1 class="display-1 text-center" id="nametitle">Cheyenne Kayla Bateman</h1>
-    </body>
-    <p class="text-primary">Hello, I'm a graphic design major with a certification in digital marketing.<br>
-      I love to write, read, and create things in any sort of artistic way. I've <br>
-      really gotten into jewelry making and print making lately. I love to travel<br>
-      and I've been to thirteen different countries outside of the US and cannot wait<br>
-      to see more of the world.</p>
-  
-   <img src="images/MeAndSparkles.jpg" 
-       img{ 
-        width= 33%
-        height= auto; }
-       alt="Me and Sparkles">
-       <br>
-          <br>
+          <div class="container">
+            <div class="row">
+                 <h1 class="display-1 text-center col" id="nametitle">Cheyenne Kayla Bateman</h1>
+            <div class="row">
+                <div class="col">
+          <p class="text-primary">Hello, I'm a graphic design major with a certification in digital marketing.<br>
+            I love to write, read, and create things in any sort of artistic way. I've <br>
+            really gotten into jewelry making and print making lately. I love to travel<br>
+            and I've been to thirteen different countries outside of the US and cannot wait<br>
+            to see more of the world.</p>
+            <div class="col">
+            <img src="images/MeAndSparkles.jpg" 
+                img{ 
+                width= 33%
+                height= auto; }
+                alt="Me and Sparkles">
+                <br>
+                <br>
           <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"></a>
+         </div>  
+            </div>
+         </div>
+        </div>
+    </body>
 </html>
