--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
             and I've been to thirteen different countries outside of the US and cannot wait<br>
             to see more of the world.</p>
             <div class="col">
-            <img src="images/MeAndSparkles.jpg" 
+            <img src="images/MeAndSparkles.jpg" alt="picture of Cheyenne Kayla Bateman and her cat Sparkles" class="img-fluid"
                 img{ 
                 width= 33%
                 height= auto; }
