--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
                 <div class="col-4">
                  <h1 class="display-1 text-center col" id="nametitle">Cheyenne Kayla Bateman</h1>
             <div class="row">
-                <div class="col-8 text-center">
+                <div class="col-8 text-center align-self-center">
           <p class="text-primary">Hello, I'm a graphic design major with a certification in digital marketing.<br>
             I love to write, read, and create things in any sort of artistic way. I've <br>
             really gotten into jewelry making and print making lately. I love to travel<br>
