--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <body>
           <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                  <h1 class="display-1 text-center col" id="nametitle">Cheyenne Kayla Bateman</h1>
             <div class="row">
           <p class="text-primary">Hello, I'm a graphic design major with a certification in digital marketing.<br>
@@ -18,11 +18,13 @@
             really gotten into jewelry making and print making lately. I love to travel<br>
             and I've been to thirteen different countries outside of the US and cannot wait<br>
             to see more of the world.</p>
-            <img src="images/MeAndSparkles.jpg" alt="picture of Cheyenne Kayla Bateman and her cat Sparkles" class="img-fluid"
+         <div class="col-lg-8" text-center align-self-center>
+   <img src="images/MeAndSparkles.jpg" alt="picture of Cheyenne Kayla Bateman and her cat Sparkles" class="img-fluid"
                 img{ 
                 width= 33%
                 height= auto; }
                 alt="Me and Sparkles">
+                
                 <br>
                 <br>
           <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"></a>
