--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </head>
     <body>
-          <div class="container">
+          <div class="container-flex">
             <div class="row">
                 <div class="col-md-4">
                  <h1 class="display-1 text-center col" id="nametitle">Cheyenne Kayla Bateman</h1>
