--- a/amuse.html
+++ b/amuse.html
@@ -16,17 +16,17 @@
   <p>This website literally just generates pictures<br>
       of random cats and you can click a button that says <br>
     "Get a cat!" and it will give you a new picture of a different cat </p>
-          <a href= "https://genrandom.com/cats/"> Check Me out! ;)</a>
+          <a class="text-center" href= "https://genrandom.com/cats/"> Check Me out! ;)</a>
 <h2>Site 2: Archive of Our Own</h2>
   <p>Archive of Our Own or Ao3 is a website <br>
       where people can write, publish, and read stories. <br>
       They range from incredibly original to works of fanfiction.</p> <br>
-            <a href= "https://archiveofourown.org//"> Check Me out! ;)</a>
+            <a class="text-center" href= "https://archiveofourown.org//"> Check Me out! ;)</a>
 <h2>Site 3: Duck Life</h2>
   <p> Duck Life is an online game where you train <br>
       and raise a duck to race in triathlons against other ducks. <br>
       You can find it on a bunch of different sites but I prefered Cool Math Games.</p> <br>
-          <a href= "https://www.coolmathgames.com/0-duck-life#immersiveModal"> Check Me out! ;)</a>
+          <a class="text-center" href= "https://www.coolmathgames.com/0-duck-life#immersiveModal"> Check Me out! ;)</a>
           <br>
           <br>
           <a class="footertext" href="index.html"><img src= "images/button_home.png" alt= "Home Button"></a>
