--- a/amuse.html
+++ b/amuse.html
@@ -14,20 +14,21 @@
        </style>
       </head>
     <body>
-        <h1>*giggles*</h1>
+        <h1 class="display-1 text-center col">*giggles*</h1>
         <h3>by Cheyenne Kayla Bateman</h3>
     </body>
-<h2>Site One: Random Cat Generator</h2>
+    <div class="col-lg-8" text-center align-self-center> </div>
+<h2 class="display-2">Site One: Random Cat Generator</h2>
   <p>This website literally just generates pictures<br>
       of random cats and you can click a button that says <br>
     "Get a cat!" and it will give you a new picture of a different cat </p>
           <a class="text-center" href= "https://genrandom.com/cats/"> Check Me out! ;)</a>
-<h2>Site 2: Archive of Our Own</h2>
+<h2 class="display-2">Site 2: Archive of Our Own</h2>
   <p>Archive of Our Own or Ao3 is a website <br>
       where people can write, publish, and read stories. <br>
       They range from incredibly original to works of fanfiction.</p> <br>
             <a class="text-center" href= "https://archiveofourown.org//"> Check Me out! ;)</a>
-<h2>Site 3: Duck Life</h2>
+<h2 class="display-2">Site 3: Duck Life</h2>
   <p> Duck Life is an online game where you train <br>
       and raise a duck to race in triathlons against other ducks. <br>
       You can find it on a bunch of different sites but I prefered Cool Math Games.</p> <br>
