--- a/amuse.html
+++ b/amuse.html
@@ -15,7 +15,7 @@
       </head>
     <body>
         <h1 class="display-1 text-center col">*giggles*</h1>
-        <h3>by Cheyenne Kayla Bateman</h3>
+        <h3 class="display-3">by Cheyenne Kayla Bateman</h3>
     </body>
     <div class="col-lg-8" text-center align-self-center> </div>
 <h2 class="display-2">Site One: Random Cat Generator</h2>
