--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,7 @@
         <style>
            body{
             background-color:RGB(219, 192, 250)
+            color:darkblue
            } 
         </style>
     </head>
