--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,6 @@
         <style>
            body{
             background-color:RGB(219, 192, 250)
-            color:darkblue
            } 
         </style>
     </head>
@@ -20,7 +19,7 @@
                 <div class="col-md-4">
                  <h1 class="display-1 text-center col" id="nametitle">Cheyenne Kayla Bateman</h1>
             <div class="row">
-          <p class="text-secondary">Hello, I'm a graphic design major with a certification in digital marketing.<br>
+          <p class="text-first">Hello, I'm a graphic design major with a certification in digital marketing.<br>
             I love to write, read, and create things in any sort of artistic way. I've <br>
             really gotten into jewelry making and print making lately. I love to travel<br>
             and I've been to thirteen different countries outside of the US and cannot wait<br>
